# remotion-video-captioner

./: .env.example  .gitignore  README.md  package-lock.json  package.json  sub-bcut.mjs  sub-jianying.mjs  sub-tts.mjs  sub-whisper.mjs  whisper-config.mjs
qwen3-asr/: .gitignore  README.md  main.py  pyproject.toml
src/: Root.tsx  captioner-config.ts  load-font.ts
src/CaptionedVideo/: InlineSubtitleEditor.tsx  Page.tsx  SubtitleEditor.tsx  SubtitleInputOverlay.tsx  SubtitlePage.tsx  index.tsx
