[build-system]
requires = ["setuptools<70", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "qwen3-asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qwen-asr>=0.0.6",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "modelscope>=1.34.0",
]
